--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -26,6 +26,7 @@
         Data ÚZIS, která Ministerstvo zdravotnictví tají nejen před veřejností, ale pouze omezeně k nim mají přístup i dispečinky záchranných služeb,
         nemocnice a lékaři.<span style="color:red">Od 22.9. 9:00 opět ÚZIS data blokuje.</span>
     </p>
+    <p>Zde najdete <a href="https://texty.hlidacstatu.cz/kapacita-nemocnic-29-9-2020-pro-cr-a-jednotlive-kraje/">data k 29. září 2020</a>.</p>
     <p>
         Záchranky tato data mají teprve od pondělí, doktoři na JIP je stále nemají a místa pro pacienty obvolávají telefony. A velké nemocnice COVID pacienty odmítají, i když mají volná místa. 
 
