--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -209,12 +209,12 @@
         {
             <div class="alert alert-warning toplinemsg" role="alert" style="">
                 <div class="text-center center-block toplinemsgtxt " style="">
-                    Pomůžeme vám s žádostí o voličský průkaz k volbám do krajů. Na podání žádosti 
+                    Voličský průkaz k volbám do krajů. Na podání žádosti osobně na úřadě 
                     @Html.Raw(
-                         Devmasters.Lang.Plural.GetWithZero((int)((new DateTime(2020, 9, 25, 15, 0, 0) - DateTime.Now).TotalDays)
+                         Devmasters.Lang.Plural.GetWithZero((int)((new DateTime(2020, 9, 30, 15, 0, 0) - DateTime.Now).TotalDays)
                              , " nečekejte, zbývá pouze <b>pár hodin</b>", "zbývá <b>pouze 1 den</b>", "zbývájí <b>{0} dny</b>", "zbývá už <b>jen {0} dní</b>")
                     ).
-                    <a class="btn btn-default btn-sm" href="https://volby.hlidacstatu.cz/?utm_source=hlidacstatu&utm_medium=header&utm_campaign=volby2020" role="button">Začít hned</a>
+                    <a class="btn btn-default btn-sm" href="https://volby.hlidacstatu.cz/?utm_source=hlidacstatu&utm_medium=header&utm_campaign=volby2020a" role="button">Jak na to</a>
                 </div>
             </div>
         }
