--- a/Web.Statu/Views/Data/Detail.cshtml
+++ b/Web.Statu/Views/Data/Detail.cshtml
@@ -70,7 +70,7 @@
         catch (Exception e)
         {
             var msg = e?.InnerException?.Message ?? e.Message;
-            msg = HlidacStatu.Util.ParseTools.ReplaceWithRegex(msg, "", @".*: \s* error \s* CS\d{1,8}:");
+            msg = Devmasters.RegexUtil.ReplaceWithRegex(msg, "", @".*: \s* error \s* CS\d{1,8}:");
 
             @Html.Raw($"<h2>Chyba v template - zpráva pro autora této databáze</h2><pre>{msg}</pre>")
             HlidacStatu.Util.Consts.Logger.Warning("Detail_CustomdataTemplate", e);
