--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -151,6 +151,7 @@
                 <a href="https://www.facebook.com/hlidacstatu"><img src="/Content/img/icon-fb.svg" alt="icon facebook"></a>
                 <a href="https://twitter.com/hlidacstatu"><img src="/Content/img/icon-twitter.svg" alt="icon twitter"></a>
             </div>
+            <a href="https://texty.hlidacstatu.cz/k-index/">K-index: Hlídáme stát s odvahou!</a>
         </div>
     </div>
 </div>
