--- a/Web.Statu/Views/Home/KapacitaNemocnic.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic.cshtml
@@ -37,4 +37,4 @@
     </style>
 }
 
-@Html.CachedAction(HtmlExtensions.CachedActionLength.Cache20min,"KapacitaNemocnic_child", Model, "")
+@Html.CachedAction(HtmlExtensions.CachedActionLength.Cache1H,"KapacitaNemocnic_child", Model, "")
